cocogen/tests/pass/simple.ccn

root node ast {
    attributes {
        int val {}
    }
};

start phase dooo {
    actions {
        pass x;
    }
};
