cocogen/tests/fail/double_phase.ccn

start phase hello {
    actions {
        pass p;
        phase1;
    }
};

phase hello {
    actions {
        pass x;
    }
};

root node ast {
    attributes {
        ast next
    }
};

phase phase1 {
    actions {
        pass doSomething;
    } 
};
